--- a/modules/musictrack.properties
+++ b/modules/musictrack.properties
@@ -1,5 +1,5 @@
 #
-#Fri Jan 09 23:30:07 CET 2009
+#Sun Sep 13 12:42:05 CEST 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
@@ -10,24 +10,27 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={212/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{209/&/null/&/true/&/false/&/false}{211/&/null/&/true/&/false/&/false}{210/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{0/&/null/&/true/&/false/&/false}{1/&/null/&/true/&/true/&/false}{2/&/null/&/true/&/false/&/false}{150/&/null/&/true/&/false/&/false}{151/&/null/&/true/&/false/&/false}{8/&/null/&/true/&/false/&/false}{11/&/null/&/false/&/false/&/false}{3/&/null/&/true/&/false/&/false}{7/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{6/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{154/&/null/&/true/&/false/&/false}{152/&/null/&/true/&/false/&/false}{10/&/null/&/true/&/false/&/false}{5/&/null/&/true/&/false/&/false}{101/&/null/&/false/&/false/&/false}{104/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}
+field_definitions={155/&/null/&/false/&/false/&/false/&/false/&/Information}{153/&/null/&/false/&/false/&/false/&/false/&/Information}{212/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{209/&/null/&/true/&/false/&/false/&/false/&/null}{211/&/null/&/true/&/false/&/false/&/false/&/Information}{210/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/true/&/false/&/false/&/false/&/Information}{1/&/null/&/true/&/true/&/false/&/false/&/Information}{2/&/null/&/true/&/false/&/false/&/false/&/Information}{150/&/null/&/true/&/false/&/false/&/false/&/Information}{151/&/null/&/true/&/false/&/false/&/false/&/Information}{8/&/null/&/true/&/false/&/false/&/false/&/Information}{11/&/null/&/false/&/false/&/false/&/false/&/null}{3/&/null/&/true/&/false/&/false/&/false/&/Information}{7/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{154/&/null/&/true/&/false/&/false/&/false/&/Information}{152/&/null/&/true/&/false/&/false/&/false/&/Information}{10/&/null/&/true/&/false/&/false/&/false/&/Information}{5/&/null/&/true/&/false/&/false/&/false/&/Information}{101/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}
 group_by=
 card_view_item_description=
 table_column_order=1\#150\#5\#
 online_search_default_region=
 auto_create_subitems=true
+mass_update_use_original_service_settings=false
 loan_form_size=500/500
 web_field_settings_dialog_size=500/300
 search_order=
-item_form_size=700/600
+title_cleanup_regex=
+item_form_size=531/695
 title_cleanup=axxo,dvdrip,cdrip,dvd-rip,cd-rip
 online_search_field_overwrite_settings=
 online_search_overwrite=false
 file_import_dialog_size=550/800
 field_settings_dialog_size=500/300
 quick_view_settings_dialog_size=500/300
+file_import_file_types=mp3\#ogg\#mp4\#mp4a\#m4p\#flac\#flc\#ape\#asf\#wav\#mpc\#ra\#wma\#
 auto_add_perfect_match=false
-quick_view_field_definitions={212/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{209/&/false/&/Horizontal/&/0}{211/&/false/&/Horizontal/&/0}{210/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{151/&/false/&/Horizontal/&/0}{8/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{11/&/false/&/Horizontal/&/0}{154/&/false/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}{7/&/false/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{6/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{152/&/false/&/Horizontal/&/0}{10/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={155/&/false/&/Horizontal/&/0}{153/&/false/&/Horizontal/&/0}{212/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{209/&/false/&/Horizontal/&/0}{211/&/false/&/Horizontal/&/0}{210/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{151/&/false/&/Horizontal/&/0}{8/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{11/&/false/&/Horizontal/&/0}{154/&/false/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}{7/&/false/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{6/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{152/&/false/&/Horizontal/&/0}{10/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}
 card_view_settings_dialog_size=500/400
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=151\#8\#104\#150\#7\#105\#9\#201\#6\#206\#1\#152\#4\#154\#11\#3\#103\#205\#2\#102\#153\#10\#5\#101\#0\#
@@ -35,10 +38,12 @@ online_search_form_size=700/600
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=550/400
-web_field_definitions={11/&/100/&/0/&/false/&/false/&/false}{2/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{7/&/100/&/0/&/true/&/false/&/false}{209/&/100/&/0/&/true/&/false/&/false}{212/&/100/&/0/&/true/&/false/&/false}{211/&/100/&/0/&/true/&/false/&/false}{210/&/100/&/0/&/true/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{8/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{5/&/100/&/0/&/true/&/false/&/false}{6/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{10/&/100/&/0/&/false/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{1/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
+web_field_definitions={155/&/100/&/0/&/false/&/false/&/false}{153/&/100/&/0/&/false/&/false/&/false}{11/&/100/&/0/&/false/&/false/&/false}{2/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{7/&/100/&/0/&/true/&/false/&/false}{209/&/100/&/0/&/true/&/false/&/false}{212/&/100/&/0/&/true/&/false/&/false}{211/&/100/&/0/&/true/&/false/&/false}{210/&/100/&/0/&/true/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{8/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{5/&/100/&/0/&/true/&/false/&/false}{6/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{10/&/100/&/0/&/false/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{1/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
 filter_dialog_size=700/400
+default_view=1
 quick_filter_default_field=0
 simple_item_view_size=450/550
+table_settings=[58]{151,75}{214,75}{8,75}{104,75}{150,101}{7,75}{105,75}{201,75}{6,75}{206,75}{1,75}{211,75}{152,75}{210,75}{11,75}{154,75}{209,75}{3,75}{103,75}{155,75}{205,75}{2,75}{212,75}{102,75}{153,75}{10,75}{5,101}{0,75}{101,75}
 file_renamer_pattern=[Artists]\\[Music Album]\\[Filename]
 online_search_ub_items=false
 synchronizer_dialog_size=550/400
