--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,6 +1,6 @@
-#Sun Feb 13 11:36:42 CET 2011
-version=3.9.5
+#Fri Apr 01 14:33:59 CEST 2011
 download_url=http\://www.datacrow.net/download.html
+version=3.9.6
 type=p
-comment=production release
 information_url=http\://www.datacrow.net/news.html
+comment=production release
