--- a/.classpath
+++ b/.classpath
@@ -62,9 +62,9 @@
 	<classpathentry kind="lib" path="lib/chart/servlet.jar"/>
 	<classpathentry kind="lib" path="lib/chart/swtgraphics2d.jar"/>
 	<classpathentry kind="lib" path="lib/jaudiotagger-2.0.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rwaals/Documents/Development/projects/datacrow/lib/xml-rpc/ws-commons-util-1.0.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rwaals/Documents/Development/projects/datacrow/lib/xml-rpc/xmlrpc-client-3.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rwaals/Documents/Development/projects/datacrow/lib/xml-rpc/xmlrpc-common-3.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rwaals/Documents/Development/projects/datacrow/lib/xml-rpc/xmlrpc-server-3.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/xml-rpc/ws-commons-util-1.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/xml-rpc/xmlrpc-client-3.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/xml-rpc/xmlrpc-common-3.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/xml-rpc/xmlrpc-server-3.1.3.jar"/>
 	<classpathentry kind="output" path="_build"/>
 </classpath>
