--- a/homepage/version.properties
+++ b/homepage/version.properties
@@ -1,6 +1,6 @@
-#Sat Jun 18 20:34:08 CEST 2011
-version=3.9.9
+#Sat Nov 19 18:18:43 CET 2011
 download_url=http\://www.datacrow.net/download.html
+version=3.9.10
 type=p
-comment=production release
 information_url=http\://www.datacrow.net/news.html
+comment=production release
