--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,4 +1,4 @@
-lblImdbOriginalTitle = Bij het zoeken naar films op de niet US imdb sites sla dan de titel in Titel (lokaal) op en de US titel in het Titel veld (traag)
+lblImdbOriginalTitle = Bij het zoeken naar films op de niet US imdb sites bewaar dan de titel in Titel (lokaal) en de US titel in het Titel veld (langzamer)
 lblNameDisplayFormat = Selecteer naam weergave formaat
 lblAssociateNameRewriter = Naam herschrijver
 msgRetrievingItems = Bezig met het ophalen van de items...
