--- a/.classpath
+++ b/.classpath
@@ -66,5 +66,6 @@
 	<classpathentry kind="lib" path="lib/xml-rpc/xmlrpc-common-3.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/xml-rpc/xmlrpc-server-3.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/jaudiotagger-2.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/tika-app-1.0.jar"/>
 	<classpathentry kind="output" path="_build"/>
 </classpath>
